# LOL-LM

./: .gitignore  Makefile  README.md  lollm.ipynb  pyproject.toml  requirements.txt  test.ipynb  train.txt  valid.txt
src/: logger.py  main.py  streamlit.py
src/notebooks/: finetuning.ipynb
src/pipelines/: __init__.py  rag_manage.py  refresh_rag.py
src/prompts/: editor.py  writer.py
src/schemas/: __init__.py  article.py  news_api.py
src/services/: __init__.py  article_generation.py  extract_news.py  rag.py
src/utils/: __init__.py  device.py  env.py
